--- a/netlify.toml
+++ b/netlify.toml
@@ -1,32 +1,5 @@
-# Konfigurasi build dasar
 [build]
-  # Direktori yang akan di-publish (berisi HTML, CSS, JS front-end)
-  publish = "public"
-  # Direktori tempat fungsi serverless Anda disimpan
+  # Direktori di mana file statis (index.html) berada.
+  publish = "." 
+  # Direktori di mana Netlify Functions Anda berada.
   functions = "netlify/functions"
-
-# Redirect untuk URL yang lebih bersih, seperti /admin -> /admin.html
-[[redirects]]
-  from = "/admin"
-  to = "/admin.html"
-  status = 200
-
-# Proxy: Semua permintaan ke /api/* akan diteruskan ke fungsi serverless Anda.
-# Ini adalah kunci untuk menyembunyikan endpoint Netlify Function yang sebenarnya.
-[[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/:splat"
-  status = 200
-
-# Headers untuk Keamanan & Caching
-[[headers]]
-  for = "/*"
-  [headers.values]
-    X-Frame-Options = "DENY"
-    X-Content-Type-Options = "nosniff"
-    Referrer-Policy = "no-referrer"
-
-[[headers]]
-  for = "/assets/*"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
